--- a/BiliUWP.vcxproj.filters
+++ b/BiliUWP.vcxproj.filters
@@ -17,6 +17,9 @@
     <Midl Include="Controls\AdaptiveGridView.idl">
       <Filter>Controls\AdaptiveGridView</Filter>
     </Midl>
+    <Midl Include="Code\Converters.idl">
+      <Filter>Code</Filter>
+    </Midl>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -43,6 +46,9 @@
     <ClCompile Include="Controls\AdaptiveGridView.cpp">
       <Filter>Controls\AdaptiveGridView</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Converters.cpp">
+      <Filter>Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -66,6 +72,9 @@
     </ClInclude>
     <ClInclude Include="Controls\AdaptiveGridView.h">
       <Filter>Controls\AdaptiveGridView</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Converters.h">
+      <Filter>Code</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
